[package]
name = "beryl"
version = "0.0.4"
authors = ["AnActualEmerald <kevinliger13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
BerylScript = {git = "https://github.com/AnActualEmerald/BerylScript.git", branch = "LALRPOP"} #being able to pull it from github is pretty based ngl
clap = "2.33.0"
rustyline = "6.3.0"
directories = "3.0.1"
console = "0.12.0"
